update movie and hero image

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 
 <body onload="loadMovie()">
 
-
-
     <div class="container">
         <div class="toggle">
 
@@ -80,7 +78,9 @@
                         <div class="topBtn">
 
                             <div class="bookBtn">
-                                <a class="bookButton compButton" href="#">Book Consultation</a>
+                                <a class="bookButton compButton"
+                                    href="mailto:georgina@lavishandsainttravel.co.uk?subject=Consultation%20Request&body=Hi%20Georgina,">Book
+                                    Consultation</a>
                             </div>
                         </div>
                     </div>
@@ -171,7 +171,7 @@
             <div class="aboutFlex">
 
                 <div class="aboutImageFlex">
-                    <img src="./images/hollirogersceo_660-1.jpg" alt="" class="aboutHero">
+                    <img src="./images/georgina1Pic.jpg" alt="" class="aboutHero">
                 </div>
 
                 <div class="aboutBodyFlex">
@@ -228,7 +228,9 @@
         </section>
         <div class="bookBtn2">
 
-            <a class="bookButton" href="#">Book Consultation</a>
+            <a class="bookButton"
+                href="mailto:georgina@lavishandsainttravel.co.uk?subject=Consultation%20Request&body=Hi%20Georgina,">Book
+                Consultation</a>
         </div>
 
 
