--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Lavish & Saint Travel </title>
 </head>
 
-<body onload="loadMovie()">
+<body onload="loadMovieLoop()">
 
     <div class="container">
         <div class="toggle">
@@ -23,7 +23,7 @@
         <div class="relativeMovie">
 
 
-            <video id="movie" src="" muted loop autoplay poster="images/3225531_large.jpg"></video>
+            <video id="movie" src="" muted loop autoplay poster></video>
 
             <div class="headControl">
                 <div class="mastHead">
@@ -255,7 +255,7 @@
             </div>
 
             <div class="abtaLogo">
-                <a href="https://www.abta.com">
+                <a href="https://www.abta.com/abta-member-search/results?search=P7386">
                     <img src="./images/ABTA-Logo-150x66.png" alt="">
                 </a>
             </div>
@@ -284,6 +284,14 @@
         <div class="endImage"></div>
         <img src="./images/pexels-taryn-elliott-3889843.jpg" alt="" class="africaImage">
 
+        <div class="endSlug">
+            <div class="rights">
+                <p>&copy; 2021 Lavish and Saint - all rights reserved</p>
+            </div>
+            <div class="creator">
+                <p><a href="https://www.deanpeltier.co.uk">Design: Dean Peltier</a></p>
+            </div>
+        </div>
 
     </div>
 
