Delta with layout changes

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body onload="loadMovieLoop()">
 
     <div class="container">
-        <div class="toggle">
+        <!-- <div class="toggle">
 
-        </div>
+        </div> -->
         <!-- <header class="mastHead">
             <h1 class="title">Lavish<br><span id="plusSign">+</span><br>Saint<br> Travel</h1>
             <h3 class="titleSlug">Private Travel Concierge Services</h3> -->
@@ -26,22 +26,23 @@
             <video id="movie" src="" muted loop autoplay poster></video>
 
             <div class="headControl">
+                <!-- <div class="toggle"></div> -->
                 <div class="mastHead">
-
+                    <div class="toggle"></div>
                     <div class="topTitle">
-                        <h1 class="title">Lavish</h1>
+                        <h1 class="title" id="titleMain">Lavish</h1>
                     </div>
 
                     <div>
-                        <h1 class="title">+</h1>
+                        <h1 class="title" id="titleMain2">+</h1>
                     </div>
 
                     <div>
-                        <h1 class="title">Saint</h1>
+                        <h1 class="title" id="titleMain3">Saint</h1>
                     </div>
 
                     <div class="bottomTitle">
-                        <h1 class="title travel">Travel</h1>
+                        <h1 class="title travel" id="titleMain4">Travel</h1>
                         <!-- <h3 class="titleSlug">Private Travel Concierge Services</h3> -->
                     </div>
 
@@ -255,28 +256,19 @@
             </div>
 
             <div class="abtaLogo">
-                <a href="https://www.abta.com/abta-member-search/results?search=P7386">
+                <a href="https://www.abta.com/abta-member-search/results?search=P7384">
                     <img src="./images/ABTA-Logo-150x66.png" alt="">
                 </a>
             </div>
 
 
-            <p class="approvedBody">Lavish & Saint Travel is ABTA approved and recognised. And works with partners
-                who
-                are
-                ATOL (Air Travel
-                Organisers
-                Licence) protected.
-
-                All the flights and flight-inclusive holidays offered by Lavish & Saint Travel partners are
-                financially
-                protected by the
-                ATOL scheme.
-
-                Book with Confidence. We are a Member of ABTA which means you have the benefit of ABTA’s assistance
-                and
-                Code
-                of Conduct.</p>
+            <p class="approvedBody">Lavish & Saint Travel is an affiliate of Inteletravel UK, who are ABTA approved
+                membership no P7384, so we have the
+                benefits of ABTA’s assistance and Code of Conduct, allowing you to travel with confidence. We also work
+                with partners
+                who are financially protected by the ATOL scheme (Air Travel Organisers Licence) on all flights and
+                flight-inclusive
+                holidays.</p>
 
 
 
@@ -298,12 +290,12 @@
 
     <div class="menu">
         <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#">Book Consultation</a></li>
-            <li><a href="https://www.instagram.com/lavishandsainttravel/">Instagram</a></li>
+            <li><a class="menuItem" href="#about">About</a></li>
+            <li><a class="menuItem" href="#">Book Consultation</a></li>
+            <li><a class="menuItem" href="https://www.instagram.com/lavishandsainttravel/">Instagram</a></li>
             <!-- <li><a href=" #">Facebook</a></li>
             <li><a href="#">Twitter</a></li> -->
-            <li><a
+            <li><a class="menuItem"
                     href="mailto:georgina@lavishandsainttravel.co.uk?subject=Luxury%20booking%20information%20request&body=Hi%20Georgina,">Contact</a>
             </li>
         </ul>
