final text changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
     </script>
 
-    <title>Lavish & Saint Travel </title>
+    <title>Lavish + Saint Travel </title>
 </head>
 
 
@@ -27,12 +27,6 @@
 <body onload="loadMovie()">
 
     <div class="container">
-        <!-- <div class="toggle">
-
-        </div> -->
-        <!-- <header class="mastHead">
-            <h1 class="title">Lavish<br><span id="plusSign">+</span><br>Saint<br> Travel</h1>
-            <h3 class="titleSlug">Private Travel Concierge Services</h3> -->
 
         <div class="relativeMovie">
 
@@ -40,7 +34,7 @@
             <video id="movie" src="" muted loop autoplay poster="./images/3225531_large.jpg"></video>
 
             <div class="headControl">
-                <!-- <div class="toggle"></div> -->
+
                 <div class="mastHead">
                     <div class="toggle"></div>
                     <div class="topTitle">
@@ -57,7 +51,7 @@
 
                     <div class="bottomTitle">
                         <h1 class="title travel" id="titleMain4">Travel</h1>
-                        <!-- <h3 class="titleSlug">Private Travel Concierge Services</h3> -->
+
                     </div>
 
 
@@ -105,7 +99,7 @@
 
 
             <div class="detailsHeadBlock">
-                <h2 class="detailsHeading">Why book with Lavish+Saint Travel?</h2>
+                <h2 class="detailsHeading">Why book with Lavish + Saint Travel?</h2>
             </div>
             <section class="whyBook">
                 <div class="whyCol1">
